# envara

./: .coverage  .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  NEW-README.md  README.md  pyproject.toml
docs/: ENV_VAR_ARG_EXPANSION.md  POSIX_EXPANSION.md
examples/: .env  app-icons-flutter.json  bsd.env  example.py  linux.env  macos.env  symmetric_example.py  windows.env
examples/config/: .env  .env.macos  bsd.env  linux.env  posix.env  windows_env
prompts/: pr_NEW-README_md.md  pr_test_any.md  pr_test_env.md  test_any.md  test_env_chars.md
scripts/: py_upload.bat  py_upload.sh
src/envara/: __init__.py  __main__.py  __main__.py,cover  dotenv.py  dotenv_file_flags.py  dotenv_filter.py  env.py  env.py,cover  env_chars.py  env_chars.py,cover  env_chars_data.py  env_chars_data.py,cover  env_exp_flags.py  env_expand_flags.py  env_expand_flags.py,cover  env_expand_info.py  env_expand_info_type.py  env_file.py  env_file.py,cover  env_file_flags.py  env_file_flags.py,cover  env_filter.py  env_filter.py,cover  env_filters.py  env_filters.py,cover  env_parse_info.py  env_patterns.py  env_platform_flags.py  env_platform_flags.py,cover  env_platform_stack_flags.py  env_quote_type.py  env_quote_type.py,cover  env_type.py  env_unquote_data.py  env_unquote_info.py  trying.py
src/envara.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test___main__.py  test_dotenv.py  test_dotenv_filter.py  test_env.py  test_env_chars.py  test_env_chars_data.py  test_env_expand_flags.py  test_env_file.py  test_env_file_flags.py  test_env_filter.py  test_env_filters.py  test_env_parse_info.py  test_env_platform_flags.py  test_env_quote_type.py  test_main.py  test_trying.py
